--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          fetch-depth: 1  # Resolves submodule issues by shallow cloning
+          clean: true     # Ensures clean working directory
 
       - name: Configure System Paths
         shell: powershell
@@ -55,10 +56,9 @@ jobs:
             --force `
             --wait-timeout=15m `
             --apiserver-ips=127.0.0.1 `
-            --apiserver-name=localhost `
-            --extra-config=apiserver.runtime-config=storage.k8s.io/v1
+            --apiserver-name=localhost
 
-          minikube addons enable ingress --wait=all
+          minikube addons enable ingress
           minikube addons enable metrics-server
           
           $env:MINIKUBE_IP = minikube ip
@@ -68,21 +68,13 @@ jobs:
       - name: Configure Docker Integration
         shell: powershell
         run: |
-          # Refresh environment variables
-          $env:MINIKUBE_IP = minikube ip
           $env:DOCKER_CERT_PATH = "$HOME\.minikube\certs"
-          
-          # Create Docker context
           docker context create minikube `
             --docker "host=tcp://$env:MINIKUBE_IP:2376,ca=$env:DOCKER_CERT_PATH/ca.pem,cert=$env:DOCKER_CERT_PATH/cert.pem,key=$env:DOCKER_CERT_PATH/key.pem"
           
           docker context use minikube
           Write-Output "Current Docker contexts:"
           docker context ls
-
-          # Verify network connectivity
-          Write-Output "Testing connection to Docker daemon..."
-          Test-NetConnection -ComputerName $env:MINIKUBE_IP -Port 2376
 
       - name: Validate Docker Connection
         shell: powershell
@@ -115,8 +107,6 @@ jobs:
           context: ./travel-to-pakistan/frontend
           tags: ${{ env.FRONTEND_IMAGE }}
           push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
         env:
           DOCKER_HOST: tcp://${{ env.MINIKUBE_IP }}:2376
           DOCKER_TLS_VERIFY: 1
@@ -128,8 +118,6 @@ jobs:
           context: ./travel-to-pakistan/backend
           tags: ${{ env.BACKEND_IMAGE }}
           push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
         env:
           DOCKER_HOST: tcp://${{ env.MINIKUBE_IP }}:2376
           DOCKER_TLS_VERIFY: 1
@@ -138,30 +126,22 @@ jobs:
       - name: Deploy Kubernetes Stack
         shell: powershell
         run: |
-          # Create namespace
           kubectl create namespace travel-app --dry-run=client -o yaml | kubectl apply -f -
 
-          # Create secrets
           kubectl create secret generic app-secrets -n travel-app `
             --from-literal=JWT_SECRET="${{ secrets.JWT_SECRET }}" `
             --from-literal=GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" `
             --from-literal=GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" `
             --dry-run=client -o yaml | kubectl apply -f -
 
-          # Deploy MongoDB
           kubectl apply -f ./travel-to-pakistan/mongodb/ -n travel-app
           kubectl wait --for=condition=ready pod -l app=mongodb -n travel-app --timeout=300s
-
-          # Deploy application components
           kubectl apply -f ./travel-to-pakistan/backend/ -n travel-app
           kubectl apply -f ./travel-to-pakistan/frontend/ -n travel-app
 
-          # Expose services
           kubectl expose deployment frontend -n travel-app --type=NodePort --port=80
           kubectl expose deployment backend -n travel-app --type=NodePort --port=3000
 
-          # Verify deployment
-          kubectl get all -n travel-app
           minikube service list -n travel-app
 
       - name: Smoke Tests
@@ -169,7 +149,7 @@ jobs:
         run: |
           $frontendUrl = minikube service frontend -n travel-app --url
           $backendUrl = minikube service backend -n travel-app --url
- 
+
           $maxRetries = 5
           $retryInterval = 15
 
