--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ jobs:
   deploy:
     runs-on: self-hosted
     env:
-      FRONTEND_IMAGE: moawiz/travel-frontend:${{ github.sha }}
-      BACKEND_IMAGE: moawiz/travel-backend:${{ github.sha }}
+      FRONTEND_IMAGE: "moawiz/travel-frontend:${{ github.sha }}"
+      BACKEND_IMAGE: "moawiz/travel-backend:${{ github.sha }}"
       MINIKUBE_DRIVER: hyperv
 
     steps:
@@ -18,139 +18,117 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          retries: 3
-          retry-wait: 30
-        env:
-          GIT_TRACE: 1
-          GIT_CURL_VERBOSE: 1
-
-      - name: Verify GitHub connectivity
-        run: |
-          $result = Test-NetConnection -ComputerName github.com -Port 443
-          Write-Output $result | Out-String
-          if (-not $result.TcpTestSucceeded) { Write-Output "Cannot reach GitHub"; exit 1 }
-        shell: powershell
+          clean: true
 
       - name: Configure System Paths
+        shell: powershell
         run: |
           $env:Path += ";C:\Program Files\Docker\Docker\resources\bin"
           $env:Path += ";C:\Program Files\Git\cmd"
           $env:Path += ";C:\kubectl"
-        shell: powershell
 
       - name: Clean Environment
-        run: |
-          try {
-            minikube delete --all --purge
-          } catch {
-            Write-Output "Minikube delete failed (likely already deleted), continuing..."
-          }
-
-          try {
-            docker context rm minikube -f
-          } catch {
-            Write-Output "Docker context removal failed, continuing..."
-          }
-
-          try {
-            Remove-Item -Path "$HOME\.minikube" -Recurse -Force
-          } catch {
-            Write-Output "Failed to remove .minikube, continuing..."
-          }
-
-          try {
-            Remove-Item -Path "$HOME\.docker" -Recurse -Force
-          } catch {
-            Write-Output "Failed to remove .docker, continuing..."
-          }
         shell: powershell
-
-      - name: Configure Network Infrastructure
         run: |
-          Get-NetFirewallRule -Name "Minikube*" | Remove-NetFirewallRule -ErrorAction SilentlyContinue
-          New-NetFirewallRule -Name "MinikubeDocker" -DisplayName "Minikube Docker" -Direction Inbound -Protocol TCP -LocalPort 2376 -Action Allow
-          New-NetFirewallRule -Name "MinikubeAPI" -DisplayName "Minikube API" -Direction Inbound -Protocol TCP -LocalPort 8443 -Action Allow
-          $switchName = "MinikubeSwitch"
-          if (-not (Get-VMSwitch -Name $switchName -ErrorAction SilentlyContinue)) {
-            New-VMSwitch -Name $switchName -SwitchType External -NetAdapterName (Get-NetAdapter | Where-Object { $_.Status -eq "Up" } | Select-Object -First 1).Name
-          }
+          minikube delete --all --purge
+          Remove-Item -Path "$HOME\.minikube" -Recurse -Force -ErrorAction SilentlyContinue
+          Remove-Item -Path "$HOME\.docker" -Recurse -Force -ErrorAction SilentlyContinue
+          docker context rm minikube -f
+
+      - name: Configure Firewall Rules
         shell: powershell
+        run: |
+          Remove-NetFirewallRule -Name "Minikube*" -ErrorAction SilentlyContinue
+          New-NetFirewallRule -Name "MinikubeDocker" -DisplayName "Minikube Docker" `
+            -Direction Inbound -Protocol TCP -LocalPort 2376 -Action Allow
+          New-NetFirewallRule -Name "MinikubeAPI" -DisplayName "Minikube API" `
+            -Direction Inbound -Protocol TCP -LocalPort 8443 -Action Allow
 
       - name: Initialize Minikube Cluster
+        shell: powershell
         run: |
           minikube start `
             --driver=$env:MINIKUBE_DRIVER `
-            --network-plugin=cni `
             --cni=flannel `
             --memory=4096 `
             --cpus=2 `
             --disk-size=20g `
             --force `
             --wait-timeout=15m `
-            --embed-certs `
-            --http-proxy=$env:HTTP_PROXY `
-            --https-proxy=$env:HTTPS_PROXY
+            --apiserver-ips=127.0.0.1 `
+            --apiserver-name=localhost
+
           minikube addons enable ingress
           minikube addons enable metrics-server
-          minikube status
-          kubectl cluster-info
-          kubectl get pods -A
-        shell: powershell
 
       - name: Configure Docker Environment
+        shell: powershell
         run: |
+          # Get fresh Minikube IP
           $env:MINIKUBE_IP = minikube ip
-          if (-not $env:MINIKUBE_IP) { Write-Output "Failed to get Minikube IP"; exit 1 }
+          "MINIKUBE_IP=$env:MINIKUBE_IP" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+          
+          # Set certificate path
           $env:DOCKER_CERT_PATH = "$HOME\.minikube\certs"
-          if (-not (Test-Path "$env:DOCKER_CERT_PATH\ca.crt")) { throw "Missing CA certificate" }
+          "DOCKER_CERT_PATH=$env:DOCKER_CERT_PATH" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+
+          # Verify certificates
+          if (-not (Test-Path "$env:DOCKER_CERT_PATH\ca.pem")) { throw "Missing CA certificate" }
           if (-not (Test-Path "$env:DOCKER_CERT_PATH\cert.pem")) { throw "Missing client certificate" }
           if (-not (Test-Path "$env:DOCKER_CERT_PATH\key.pem")) { throw "Missing client key" }
-          & minikube docker-env --shell powershell | Invoke-Expression
-          $Env:DOCKER_HOST = "tcp://$env:MINIKUBE_IP:2376"
-          $Env:DOCKER_TLS_VERIFY = "1"
-          $Env:DOCKER_CERT_PATH = "$HOME\.minikube\certs"
-          Write-Output "DOCKER_* variables:"
-          Get-ChildItem Env: | Where-Object { $_.Name -like "DOCKER_*" } | ForEach-Object { Write-Output "$($_.Name)=$($_.Value)" }
-          Write-Output "Docker contexts:"
+
+          # Configure Docker environment
+          $env:DOCKER_HOST = "tcp://$env:MINIKUBE_IP:2376"
+          $env:DOCKER_TLS_VERIFY = "1"
+          "DOCKER_HOST=$env:DOCKER_HOST" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+          "DOCKER_TLS_VERIFY=$env:DOCKER_TLS_VERIFY" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+
+          # Create Docker context
+          docker context create minikube `
+            --docker "host=$env:DOCKER_HOST,ca=$env:DOCKER_CERT_PATH/ca.pem,cert=$env:DOCKER_CERT_PATH/cert.pem,key=$env:DOCKER_CERT_PATH/key.pem"
+          
+          docker context use minikube
+          Write-Output "Current Docker contexts:"
           docker context ls
-        shell: powershell
 
       - name: Validate Docker Connection
-        run: |
-          $minikubeIp = $env:MINIKUBE_IP
-          Write-Output "Testing network to $minikubeIp:2376"
-          Test-NetConnection -ComputerName $minikubeIp -Port 2376 | Out-String
-          $attempt = 1
-          $maxRetries = 5
-          while ($attempt -le $maxRetries) {
-            Write-Output "Docker info attempt $attempt"
-            docker info --format '{{.ServerVersion}}'
-            if ($LASTEXITCODE -eq 0) { break }
-            Write-Output "Docker daemon not reachable, resetting environment..."
-            & minikube docker-env --shell powershell | Invoke-Expression
-            $Env:DOCKER_HOST = "tcp://$minikubeIp:2376"
-            $Env:DOCKER_TLS_VERIFY = "1"
-            $Env:DOCKER_CERT_PATH = "$HOME\.minikube\certs"
-            $attempt++
-            Start-Sleep -Seconds 15
-          }
-          if ($LASTEXITCODE -ne 0) { Write-Output "Docker daemon unreachable after $maxRetries retries"; exit 1 }
-          docker run --rm hello-world
         shell: powershell
+        run: |
+          $maxRetries = 5
+          $retryCount = 0
+          $success = $false
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-          config: |
-            [builder]
-            timeout = 120s
+          while (-not $success -and $retryCount -lt $maxRetries) {
+              try {
+                  Write-Output "Testing Docker connection (attempt $($retryCount + 1))..."
+                  
+                  # Refresh environment variables
+                  $env:MINIKUBE_IP = minikube ip
+                  $env:DOCKER_HOST = "tcp://$env:MINIKUBE_IP:2376"
+                  
+                  # Test basic connectivity
+                  Test-NetConnection -ComputerName $env:MINIKUBE_IP -Port 2376
+                  
+                  # Test Docker commands
+                  docker info
+                  docker run --rm hello-world
+                  
+                  $success = $true
+              } catch {
+                  $retryCount++
+                  Write-Output "Connection failed, retrying in 15 seconds..."
+                  Start-Sleep -Seconds 15
+                  
+                  # Reset Docker context
+                  docker context use minikube
+              }
+          }
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          if (-not $success) {
+              throw "Failed to establish Docker connection after $maxRetries attempts"
+          }
+
+      
 
       - name: Build and Push Frontend
         uses: docker/build-push-action@v5
